Bug 942854 - [Calendar] Scrolling the week view results into results into overlapping artifacts. r=kgrandon

--- a/apps/calendar/style/day_views.css
+++ b/apps/calendar/style/day_views.css
@@ -53,7 +53,7 @@
   position: absolute;
   height: 6rem;
   top: 0;
-  z-index: 10;
+  z-index: 0;
 }
 
 .day-events .hour-allday .event {
