--- a/apps/calendar/style/week_view.css
+++ b/apps/calendar/style/week_view.css
@@ -168,7 +168,7 @@
 #week-view .week-events > ol li.event {
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 0;
 }
 
 #week-view .week-events .container {
